feat: 历史记录拖动模板

--- a/styles/iconfont.scss
+++ b/styles/iconfont.scss
@@ -1,23 +1,30 @@
 @font-face {
-    font-family: "iconfont"; /* Project id 5051904 */
-    src: url('https://at.alicdn.com/t/c/font_5051904_wkkxfnpljt.woff2?t=1764211929979') format('woff2'),
-         url('https://at.alicdn.com/t/c/font_5051904_wkkxfnpljt.woff?t=1764211929979') format('woff'),
-         url('https://at.alicdn.com/t/c/font_5051904_wkkxfnpljt.ttf?t=1764211929979') format('truetype');
-  }
-  
-  .iconfont {
-    font-family: "iconfont" !important;
-    font-size: 16px;
-    font-style: normal;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  .icon-tingzhi:before {
-    content: "\e611";
-  }
-  
-  .icon-send-s:before {
-    content: "\e652";
-  }
-  
+  font-family: "iconfont"; /* Project id 5051904 */
+  src: url('https://at.alicdn.com/t/c/font_5051904_vz0frs36ut.woff2?t=1764313775179') format('woff2'),
+       url('https://at.alicdn.com/t/c/font_5051904_vz0frs36ut.woff?t=1764313775179') format('woff'),
+       url('https://at.alicdn.com/t/c/font_5051904_vz0frs36ut.ttf?t=1764313775179') format('truetype');
+}
+
+.iconfont {
+  font-family: "iconfont" !important;
+  font-size: 16px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-guanbi:before {
+  content: "\e601";
+}
+
+.icon-caidan:before {
+  content: "\e80a";
+}
+
+.icon-tingzhi:before {
+  content: "\e611";
+}
+
+.icon-send-s:before {
+  content: "\e652";
+}
